deployment/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: atehere-service
  namespace: mechatron-x
spec:
  selector:
    app: atehere
  ports:
    - port: 80
      targetPort: 80
