deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atehere-ingress
  namespace: mechatron-x
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - host: atehere.mechatronx.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: atehere-service
                port:
                  number: 80
  tls:
    - secretName: mechatronx.net.certs
